<resources>
    <string name="app_name">TREsh</string>
    <string name="password">Input your password</string>
    <string name="email">Input your email</string>
    <string name="fail_take_picture">Fail to take picture</string>
    <string name="fail_show_camera">Fail to show camera</string>
    <string name="picture_logo">This StoryApp logo</string>
    <string name="welcome">"Welcome !"</string>
    <string name="add_story_menu">Add Story Menu</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="language">Change Language</string>
    <string name="sign">Email Not Valid</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="list_story">List Story</string>
    <string name="add_story">Add Story</string>
    <string name="logout">Log Out</string>

    <string name="sign_in_with_your_account">Sign In with your account</string>
    <string name="register_your_account">Register your account</string>
    <string name="did_t_have_account"><u>Did\'t have account?</u></string>
    <string name="have_account"><u>Have account?</u></string>

    <string name="input_name">Input your name</string>
    <string name="login_account">Login your account</string>
    <string name="continue_">Continue</string>
    <string name="login_success">Sign In Success</string>
    <string name="register_success">Register Success, You can Sign In with your account</string>
    <string name="register_failed">Register Failed</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="upload_success">Upload Success</string>
    <string name="log_out_success">Log Out Success</string>
    <string name="information">Information</string>

    <string name="camera">Camera</string>
    <string name="description">Description</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="change_language">Change language</string>
    <string name="new_story">New Story</string>
    <string name="image_preview">Image preview</string>

    <string name="image_story">Image story</string>
    <string name="name">Name</string>
    <string name="no_story">Fail to load story</string>
    <string name="load_story">Load Story Successful</string>
    <string name="post_story">Post story</string>
    <string name="invalid_permission">Can\'t get permission</string>
    <string name="no_attach_file">No file attached, please attach image first</string>
    <string name="rotate_image">Rotate image</string>
    <string name="fail_load_stories">Stories failed to load</string>

    <string name="detail_story">Detail Story</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="capture_image">Capture image</string>
    <string name="must_filled">Must be filled</string>
    <string name="question">Dont have account ??</string>
    <string name="login">Login</string>
    <string name="title">TREsh</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="retry">Retry</string>
    <string name="google_maps">Google Maps</string>
    <string name="location_not_found">Your location is not found. Try Again</string>
    <string name="your_location">Your Location</string>
    <string name="location">Location :</string>
    <string name="empty_location">-</string>
    <string name="info">You\'re Logged in as</string>
    <string name="title_splash">TREsh App</string>
    <string name="versi">Version 1.0</string>
    <string name="abtApp">About Application</string>
    <string name="descApp1">What is tresh ?</string>
    <string name="descApp2">TREsh consists of the spelling word Trash which means garbage, and RE which is the Embodiment of Reduce, Recycle, Reuse</string>
    <string name="descApp3">TREsh is an application used for classifying garbage .how to use this app is quite simple, just take a picture of the garbage want you to classify , then the application will group the garbage according to the type</string>
    <string name="start"><![CDATA[Start]]></string>
    <string name="classify">Done</string>
    <string name="history">History</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="opcamera">Open Camera</string>
    <string name="opgallery">Open Gallery</string>
    <string name="takepic">Take Your Picture</string>
    <string name="greet">Welcome</string>
    <string name="to_trash_app">To TREsh App</string>
    <string name="result_classification">Result Classification</string>
    <string name="result">Result</string>
    <string name="predict">Predict</string>
</resources>