<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="173dp"
        android:layout_height="39dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/autour_one"
        android:text="@string/greet"
        android:textColor="@color/teal_200"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totrash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/autour_one"
        android:text="@string/to_trash_app"
        android:textColor="@color/teal_200"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <ImageView
        android:id="@+id/ava_view"
        android:layout_width="313dp"
        android:layout_height="263dp"
        android:layout_below="@+id/welcome"
        android:layout_gravity="center"
        android:layout_marginStart="154dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="161dp"
        android:src="@drawable/recy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ava_view"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/ava_view"
        tools:layout_editor_absoluteX="16dp">


        <TextView
            android:id="@+id/abtApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/autour_one"
            android:text="@string/abtApp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/appDesc3"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/comic_neue_bold"
            android:text="@string/descApp3"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_button"
            android:text="@string/start"
            android:drawableEnd="@drawable/ic_next"
            android:textSize="15sp"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appDesc" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

